--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.MeliSearcher" parent="Theme.AppCompat.Light">
+    <style name="Theme.MeliSearcher" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/primary_variant</item>
@@ -30,7 +30,7 @@
 
     <style name="appBarStyle" parent="Widget.Design.AppBarLayout">
         <item name="elevation">0dp</item>
-
+        <item name="layout_behavior">@string/appbar_scrolling_view_behavior</item>
     </style>
 
     <style name="toolbarStyle" parent="Widget.AppCompat.Toolbar">
